# bingpapr

./: .gitignore  Cargo.toml  README.md  bingdaily.PKGBUILD  bingpapr.PKGBUILD
bingdaily/: Cargo.toml
bingdaily/res/: net.boothwhack.BingDaily1.service
bingdaily/src/: main.rs  manager.rs
bingpapr/: Cargo.toml
bingpapr/src/: bingdaily.rs  bingwallpaper.rs  main.rs
bingwallpaper/src/: bing.rs  main.rs  manager.rs
hyprpaper/: Cargo.toml
hyprpaper/src/: lib.rs
src/: bing.rs  hyprpaper.rs  main.rs
