[package]
name = "bingpapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
directories = "5.0"
env_logger = "0.10"
hyprland = "0.3"
little_exif = "0.1"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.29", features = ["rt", "macros"] }
tokio-stream = "0.1"
tokio-walltime = "0.1"
wayland-client = { version = "0.30", features = ["log"] }
