[package]
name = "bingdaily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
directories = "5.0"
env_logger = "0.10"
log = "0.4"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.29", features = ["fs", "macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tokio-walltime = "0.1"
zbus = "3.14"
