[package]
name = "bingpapr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
hyprland = "0.3"
hyprpaper = { path = "../hyprpaper" }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.29", features = ["macros", "rt-multi-thread"] }
zbus = "3.14"
